[gd_scene load_steps=23 format=2]

[ext_resource path="res://script_inimigo.gd" type="Script" id=1]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0004.png" type="Texture" id=2]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0009.png" type="Texture" id=3]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0008.png" type="Texture" id=4]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0014.png" type="Texture" id=5]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0005.png" type="Texture" id=6]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0015.png" type="Texture" id=7]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0012.png" type="Texture" id=8]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0001.png" type="Texture" id=9]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0016.png" type="Texture" id=10]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0002.png" type="Texture" id=11]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0006.png" type="Texture" id=12]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0010.png" type="Texture" id=13]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0003.png" type="Texture" id=14]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0011.png" type="Texture" id=15]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0013.png" type="Texture" id=16]
[ext_resource path="res://DeadlyDaisyRun/flowergrunt_run_0007.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48.5, 56 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "correr"
length = 1.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "morrendo"
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 47.5, 54.75 )

[node name="Node2D" type="Node2D"]
position = Vector2( 477, 276 )

[node name="Inimigo" type="KinematicBody2D" parent="."]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Inimigo"]
position = Vector2( -38, 44 )
rotation = -0.00269157
scale = Vector2( 0.599979, 0.563236 )
texture = ExtResource( 9 )
region_rect = Rect2( 198, 132, 53, 54 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inimigo"]
modulate = Color( 0.12549, 0.207843, 0.431373, 1 )
position = Vector2( -33.5, 34 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Inimigo"]
autoplay = "correr"
anims/RESET = SubResource( 2 )
anims/correr = SubResource( 3 )
anims/morrendo = SubResource( 5 )

[node name="RayCast2Esq" type="RayCast2D" parent="Inimigo"]
position = Vector2( -92, 50 )
enabled = true
cast_to = Vector2( 1, 80 )

[node name="RayCast2Dr" type="RayCast2D" parent="Inimigo"]
position = Vector2( 21, 52 )
enabled = true
cast_to = Vector2( 0, 80 )

[node name="Area2D" type="Area2D" parent="Inimigo"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inimigo/Area2D"]
position = Vector2( -37, 37 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Inimigo/Area2D" to="Inimigo" method="causar_dano"]
